# mongolit

./: .env.example  .flake8  .gitignore  LICENSE  README.md  app.py  configure_database.py  encoders.py  pyproject.toml  resposne.py
apps/: decorators.py  resposne.py  user_role.py
apps/checkers/: article.py  user.py
apps/views/: article.py  auth.py  base.py  blog.py  user.py
data/: article.csv  article.json  articles.json  user.csv  user.json  users.json
mongolit/: app.py
static/css/: style.css  styles.css
templates/: create.html  detail.html  index.html  login.html  update.html
templates/admin/: users.html
templates/article/: create.html  detail.html  index.html  update.html
templates/auth_forms/: login.html  register.html
templates/user/: profile.html
views/: blog.py
